chore: gather translate & score
